# Embedded_Systems_T78

./: CMakeCache.txt  CMakeLists.txt  README.md  example_auto_set_url.cmake  main.c
barcode_module/: CMakeLists.txt  barcode_module.c  barcode_module.h  main.c
barcode_sensor/: CMakeLists.txt  barcode_sensor.c
integration/: CMakeLists.txt  main.c
line_sensor/: CMakeLists.txt  line_sensor.c  line_sensor.h  main.c
magnetometer/: CMakeLists.txt  magnetometer.c  magnetometer.h  main.c
main/: CMakeLists.txt  main.c
motor/: CMakeLists.txt  main.c  motor.c  motor.h
ultrasonic/: CMakeLists.txt  ultrasonic.c  ultrasonic.h
ultrasonic_sensor/: CMakeLists.txt  ultrasonic_sensor.c
web-ui/: CMakeLists.txt  cgi.h  htmldata.c  main.c  ssi.h  wifi.c  wifi.h
web-ui/html_files/: index.shtml
